[gd_scene load_steps=5 format=2]

[ext_resource path="res://DroppedBlock.gd" type="Script" id=1]
[ext_resource path="res://WorldShaderMat.tres" type="Material" id=2]
[ext_resource path="res://art/dsfhrtjgf.png" type="Texture" id=3]
[ext_resource path="res://WorldShaderMatItem.tres" type="Material" id=4]

[node name="DroppedBlock" type="Spatial" groups=["DroppedBlock"]]
script = ExtResource( 1 )

[node name="Rect" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.299771, 0 )

[node name="Top" type="Sprite3D" parent="Rect"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.2, 0 )
material_override = ExtResource( 2 )
cast_shadow = 0
pixel_size = 0.025
transparent = false
shaded = true
texture = ExtResource( 3 )

[node name="Bottom" type="Sprite3D" parent="Rect"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.2, 0 )
material_override = ExtResource( 2 )
cast_shadow = 0
pixel_size = 0.025
transparent = false
shaded = true
texture = ExtResource( 3 )

[node name="SideA" type="Sprite3D" parent="Rect"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.2 )
material_override = ExtResource( 2 )
cast_shadow = 0
pixel_size = 0.025
transparent = false
shaded = true
texture = ExtResource( 3 )

[node name="SideB" type="Sprite3D" parent="Rect"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.2 )
material_override = ExtResource( 2 )
cast_shadow = 0
pixel_size = 0.025
transparent = false
shaded = true
texture = ExtResource( 3 )

[node name="SideC" type="Sprite3D" parent="Rect"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.2, 0, 0 )
material_override = ExtResource( 2 )
cast_shadow = 0
pixel_size = 0.025
transparent = false
shaded = true
texture = ExtResource( 3 )

[node name="SideD" type="Sprite3D" parent="Rect"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.2, 0, 0 )
material_override = ExtResource( 2 )
cast_shadow = 0
pixel_size = 0.025
transparent = false
shaded = true
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
material_override = ExtResource( 4 )
cast_shadow = 0
pixel_size = 0.025
texture = ExtResource( 3 )
